refactor(facility): simplify getAllFacilities by using Collectors for grouping and mapping